[package]
name = "nopcrat"
version = "1.0.0"
authors = ["Jaemin Hong <hjm0901@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
rustfix = "0.6.1"
etrace = "1.1.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
lazy_static = "1.4.0"
serde = "1.0.189"
serde_json = "1.0.107"
rand = "0.8.5"

[package.metadata.rust-analyzer]
rustc_private = true
